# grids-jack

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  PERFORMANCE.md  README.md  implementation.md  main.cpp  pattern_generator_wrapper.cpp  pattern_generator_wrapper.h  sample_bank.cpp  sample_bank.h  sample_player.cpp  sample_player.h  test_pattern_generator.cpp  test_sample_bank.cpp  test_sample_player.cpp  test_sample_player_integration.cpp  test_velocity.cpp  test_velocity_integration.cpp
_codeql_build_dir/: Makefile  test_pattern_generator  test_sample_bank  test_sample_player  test_sample_player_integration  test_velocity  test_velocity_integration
avrlib/: random.cc  random.h
grids/: pattern_generator.h
